--- a/index.html
+++ b/index.html
@@ -131,19 +131,19 @@
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
         <img src="img_nature_wide.jpg" style="width: 100%" />
-        <div class="text">Caption Text</div>
+        <div class="text"> </div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
         <img src="img_snow_wide.jpg" style="width: 100%" />
-        <div class="text">Caption Two</div>
+        <div class="text"> </div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
         <img src="img_mountains_wide.jpg" style="width: 100%" />
-        <div class="text">Caption Three</div>
+        <div class="text"> </div>
       </div>
 
       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
